--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@auth0/angular-jwt": "^3.0.0",
     "hammerjs": "^2.0.8",
     "rxjs": "~6.4.0",
+    "sha256": "^0.2.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
