--- a/package.json
+++ b/package.json
@@ -22,9 +22,13 @@
     "@angular/platform-browser-dynamic": "~8.2.0",
     "@angular/router": "~8.2.0",
     "@auth0/angular-jwt": "^3.0.0",
+    "big-integer": "^1.6.46",
+    "elgamal": "^0.3.0",
     "hammerjs": "^2.0.8",
+    "moment": "^2.24.0",
     "rxjs": "~6.4.0",
     "sha256": "^0.2.0",
+    "sjcl": "^1.0.8",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
