--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "sha256": "^0.2.0",
     "sjcl": "^1.0.8",
     "tslib": "^1.10.0",
+    "unescape-js": "^1.1.1",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
