--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
     "@angular/core": "~8.2.0",
     "@angular/forms": "~8.2.0",
     "@angular/material": "^8.1.3",
+    "@angular/material-moment-adapter": "^8.2.3",
     "@angular/platform-browser": "~8.2.0",
     "@angular/platform-browser-dynamic": "~8.2.0",
     "@angular/router": "~8.2.0",
     "@auth0/angular-jwt": "^3.0.0",
+    "@mat-datetimepicker/core": "^2.0.1",
+    "@mat-datetimepicker/moment": "^2.0.1",
     "elgamal": "^0.3.0",
     "hammerjs": "^2.0.8",
     "moment": "^2.24.0",
