--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
     "@mat-datetimepicker/moment": "^2.0.1",
     "elgamal": "^0.3.0",
     "hammerjs": "^2.0.8",
+    "json-stable-stringify": "^1.0.1",
     "moment": "^2.24.0",
     "rxjs": "~6.4.0",
     "sha256": "^0.2.0",
     "sjcl": "^1.0.8",
+    "sort-object": "^3.0.3",
     "tslib": "^1.10.0",
     "unescape-js": "^1.1.1",
     "zone.js": "~0.9.1"
